--- a/lastchance/package.json
+++ b/lastchance/package.json
@@ -18,7 +18,8 @@
     "next": "15.1.2",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "shadcn-ui": "^0.9.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
